--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,7 @@
     transform: rotate(360deg);
   }
 } */
+
+*{
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
