--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
-
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace&family=Inter:wght@100..900&family=Work+Sans:wght@300&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -20,4 +20,6 @@ code {
 html, body {
   max-width: 100%;
   overflow-x: hidden;
+  font-family: "Inter", sans-serif;
+/* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
 }
