--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -135,14 +135,14 @@
     box-sizing: border-box;
 }
 
-.about-us-page .donate {
+/* .about-us-page .donate {
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 700;
     font-size: 30px;
     text-transform: uppercase;
     color: #FFFFFF;
-}
+} */
 
 .about-us-page .group-2 {
     background: #145A98;
@@ -150,8 +150,15 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 10px 13.5px 10px 13px;
+    padding: 13px 18px 12px 18px;
     box-sizing: border-box;
+    color:#FFFFFF;
+    font-family: 'Inter';
+    font-weight: 500;
+    font-size: 25px;
+    text-transform: uppercase;
+    overflow-wrap: break-word;
+    border: none;
 }
 
 .about-us-page .container {
@@ -206,7 +213,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35px;
     color: #145A98;
 }
 
@@ -217,7 +224,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 300;
-    font-size: 30px;
+    font-size: 27px;
     color: #3D76AF;
     width: 1000px;
 }
@@ -228,7 +235,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 300;
-    font-size: 30px;
+    font-size: 25px;
     color: #3D76AF;
 }
 
@@ -298,7 +305,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35px;
     color: #145A98;
 }
 
@@ -336,7 +343,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35px;
     color: #145A98;
 }
 
@@ -347,7 +354,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35px;
     color: #145A98;
     width: 230px;
 }
@@ -359,7 +366,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35px;
     color: #145A98;
 }
 
@@ -368,7 +375,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35px;
     color: #145A98;
 }
 
@@ -404,7 +411,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35px;
     color: #145A98;
 }
 
@@ -416,7 +423,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 300;
-    font-size: 30px;
+    font-size: 27px;
     color: #3D76AF;
     width: 1000px;
 }
@@ -448,7 +455,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
-    font-size: 40px;
+    font-size: 35px;
     color: #FFFFFF;
 }
 
@@ -458,7 +465,7 @@
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 300;
-    font-size: 30px;
+    font-size: 27px;
     color: #FFFFFF;
     width: 1000px;
 }
