--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,170 +1,177 @@
  .footer-section {
-    background: #145A98;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    padding: 24px 0 22px 0;
-    width: fit-content;
-    box-sizing: border-box;
-  }
-  
-   .logo-2 {
-    background: url('../../assets/images/logo2.jpeg') 50% / cover no-repeat;
-    margin: 0 58px 39px 58px;
-    align-self: flex-start;
-    width: 108px;
-    height: 109px;
-  }
-  
-   .footer-container {
-    margin: 0 54.7px 19px 58px;
-    display: flex;
-    flex-direction: row;
-    width: fit-content;
-    box-sizing: border-box;
-  }
-  
-   .footer-details {
-    margin: 4px 88.6px 0 0;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 1.4;
-    color: rgba(255, 255, 255, 0.8);
-    width: 40%;
-  }
-  
-   .footer-link {
-    margin: 2px 54.3px 44px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-sizing: border-box;
-  }
-  
-   .footer-link-other {
-    margin-bottom: 2px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 1.5;
-    color: #FFFFFF;
-  }
-  
-   .footer-social-link {
-    position: relative;
-    margin: 0 54.9px 33.5px 54.9px;
-    display: flex;
-    flex-direction: row;
-    align-self: flex-end;
-    padding: 0 0 0px 1px;
-    width: fit-content;
-    box-sizing: border-box;
-  }
-  
-   .email-2 {
-    background: url('../../assets/images/email2.png') 50% / cover no-repeat;
-    position: absolute;
-    left: -45px;
-    bottom: 3px;
-    width: 30px;
-    height: 30px;
-  }
-  
-   .email-link {
-    margin: 9px 8.5px 5.5px -9px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 20px;
-    color: #FFFFFF;
-  }
-  
-   .instagram {
-    background: url('../../assets/images/image5.png') 50% / cover no-repeat;
-    margin: 4px 12px 0 0;
-    bottom: 50px;
-    width: 32px;
-    height: 32px;
-  }
-  
-   .instagram-link {
-    margin: 9px 10.5px 5.5px -9px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 20px;
-    color: #FFFFFF;
-  }
-  
-   .whatsapp {
-    background: url('../../assets/images/image6.png') 50% / cover no-repeat;
-    margin: 4px 5px 0 0;
-    width: 32px;
-    height: 32px;
-  }
-  
-   .whatsapp-link {
-    margin: 9px 0 5.5px 0;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 20px;
-    color: #FFFFFF;
-  }
-  
-  
-  
-   .line-1 {
-    background: rgba(255, 255, 255, 0.5);
-    margin-bottom: 26px;
-    width: 100%;
-    height: 1px;
-  }
-  
-   .footer-section-2 {
-    margin: 0 54px 0 58px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 1328px;
-    box-sizing: border-box;
-  }
-  
-   .copyright-section {
-    margin-right: 12px;
-    /* width: 1056.3px; */
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 16px;
-    color: #FFFFFF;
-  }
-  
-  .powered-by-take-tech-devs {
-    font-family: 'Inter';
-    font-weight: 400;
-    line-height: 1.333;
-    color: #321910;
-    font-size: 16px;
-  }
-  
-   .poweredby {
-    overflow-wrap: break-word;
-    font-family: 'Poppins';
-    font-weight: 400;
-    /* font-size: 20px; */
-    color: #FFFFFF;
-  }
-  
-  .poweredby span {
-    font-family: 'Inter';
-    font-weight: 400;
-    /* font-size: 20px; */
-    line-height: 1.333;
-  }
+   background: #145A98;
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   padding: 24px 0 22px 0;
+   width: 100%;
+   box-sizing: border-box;
+ }
+
+ .logo-2 {
+   background: url('../../assets/images/logo2.jpeg') 50% / cover no-repeat;
+   margin: 0 58px 39px 58px;
+   align-self: flex-start;
+   width: 108px;
+   height: 109px;
+ }
+
+ .footer-container {
+   margin: -47px 54.7px 19px 600px;
+   display: flex;
+   flex-direction: row;
+   width: fit-content;
+   box-sizing: border-box;
+ }
+
+ .footer-details {
+   margin: 4px -30px 0 55px;
+   display: inline-block;
+   overflow-wrap: break-word;
+   font-family: 'Inter';
+   font-weight: 400;
+   font-size: 20px;
+   line-height: 1.4;
+   color: rgba(255, 255, 255, 0.8);
+   width: 25%;
+ }
+
+ .footer-link {
+   margin: 0px -122px 44px 270px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   box-sizing: border-box;
+ }
+
+ .footer-link-other {
+   margin-bottom: 2px;
+   display: inline-block;
+   overflow-wrap: break-word;
+   font-family: 'Inter';
+   font-weight: 400;
+   font-size: 20px;
+   line-height: 1.5;
+   color: #FFFFFF;
+   text-align: center;
+   margin-left: -50px;
+ }
+
+ a {
+   text-decoration: none;
+   cursor: pointer;
+ }
+
+ .footer-social-link {
+   position: relative;
+   margin: 0 54.9px 33.5px 54.9px;
+   display: flex;
+   flex-direction: row;
+   align-self: flex-end;
+   padding: 0 0 0px 1px;
+   width: fit-content;
+   box-sizing: border-box;
+ }
+
+ .email-2 {
+   background: url('../../assets/images/email2.png') 50% / cover no-repeat;
+   position: absolute;
+   left: -45px;
+   bottom: 3px;
+   width: 30px;
+   height: 30px;
+ }
+
+ .email-link {
+   margin: 9px 8.5px 5.5px -9px;
+   display: inline-block;
+   overflow-wrap: break-word;
+   font-family: 'Inter';
+   font-weight: 400;
+   font-size: 20px;
+   color: #FFFFFF;
+ }
+
+ .instagram {
+   background: url('../../assets/images/image5.png') 50% / cover no-repeat;
+   margin: 4px 12px 0 0;
+   bottom: 50px;
+   width: 32px;
+   height: 32px;
+ }
+
+ .instagram-link {
+   margin: 9px 10.5px 5.5px -9px;
+   display: inline-block;
+   overflow-wrap: break-word;
+   font-family: 'Inter';
+   font-weight: 400;
+   font-size: 20px;
+   color: #FFFFFF;
+ }
+
+ .whatsapp {
+   background: url('../../assets/images/image6.png') 50% / cover no-repeat;
+   margin: 4px 5px 0 0;
+   width: 32px;
+   height: 32px;
+ }
+
+ .whatsapp-link {
+   margin: 9px 0 5.5px 0;
+   font-family: 'Inter';
+   font-weight: 400;
+   font-size: 20px;
+   color: #FFFFFF;
+ }
+
+
+
+ .line-1 {
+   background: rgba(255, 255, 255, 0.5);
+   margin-bottom: 26px;
+   width: 100%;
+   height: 1px;
+ }
+
+ .footer-section-2 {
+   margin: 0 54px 0 58px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   width: 1328px;
+   box-sizing: border-box;
+ }
+
+ .copyright-section {
+   margin-right: 12px;
+   /* width: 1056.3px; */
+   overflow-wrap: break-word;
+   font-family: 'Inter';
+   font-weight: 400;
+   font-size: 16px;
+   color: #FFFFFF;
+ }
+
+ .powered-by-take-tech-devs {
+   font-family: 'Inter';
+   font-weight: 400;
+   line-height: 1.333;
+   color: #321910;
+   font-size: 16px;
+ }
+
+ .poweredby {
+   overflow-wrap: break-word;
+   font-family: 'Poppins';
+   font-weight: 400;
+   /* font-size: 20px; */
+   color: #FFFFFF;
+ }
+
+ .poweredby span {
+   font-family: 'Inter';
+   font-weight: 400;
+   /* font-size: 20px; */
+   line-height: 1.333;
+ }
