--- a/frontend/src/Components/Form/Form.css
+++ b/frontend/src/Components/Form/Form.css
@@ -1,45 +1,44 @@
-
-
-.container {
+.form-container {
     max-width: 600px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 40px;
     background-color: #3D76AF;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 100px;
 }
 
-h1 {
+.formheading {
     text-align: center;
     color: white;
+    margin-bottom: 50px;
 }
 
-form {
+.form {
     display: flex;
     flex-direction: column;
 }
 
-label {
+.formlable {
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 3px;
     color: #ffffff;
 }
 
-input,
-textarea {
+.forminput {
   border: none;
   border-bottom: 1px solid #ccc;
   padding: 10px;
   margin-bottom: 15px;
-  /* Remove borders on other three sides */
   border-left: none;
   border-right: none;
   border-top: none;
   background-color: #3D76AF;
   outline: none;
+  color: #ffffff;
+  font-size: 20px;
 }
 
-button {
+.formbtn {
     color: #3D76AF;
     border: none;
     padding: 10px 20px;
@@ -49,6 +48,27 @@ button {
     margin: 0 auto;
 }
 
-button:hover {
-    background-color: #0056b3;
+
+.form-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-align {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+}
+
+.right-align {
+    flex: 1;
+    text-align: right;
+    justify-content: space-between;
+}
+
+.right-align img {
+    margin: 5px;
+    height: 30px;
+    width: 30px;
 }
