--- a/frontend/src/Components/Form/Form.css
+++ b/frontend/src/Components/Form/Form.css
@@ -41,11 +41,15 @@
 .formbtn {
     color: #3D76AF;
     border: none;
-    padding: 10px 20px;
+    padding: 7px 14px 6px 12px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     width: 100px;
     margin: 0 auto;
+    background-color: #ffffff;
+    font-size: 21px;
+    font-weight: 550;
+    margin-top: 12px;
 }
 
 
@@ -59,12 +63,14 @@
     display: flex;
     flex-direction: column;
     color: #ffffff;
+    margin-top: 40px;
 }
 
 .right-align {
     flex: 1;
     text-align: right;
     justify-content: space-between;
+    margin-top: 40px;
 }
 
 .right-align img {
