--- a/frontend/src/Components/Form/Form.css
+++ b/frontend/src/Components/Form/Form.css
@@ -18,17 +18,22 @@
     flex-direction: column;
 }
 
-.formlable {
+/* .formlable {
     font-weight: bold;
     margin-bottom: 3px;
     color: #ffffff;
-}
+    display: block;
+} */
+
+.forminput::placeholder {
+    color: #ffffff; 
+  }
 
 .forminput {
   border: none;
-  border-bottom: 1px solid #ccc;
-  padding: 10px;
-  margin-bottom: 15px;
+  border-bottom: 2px solid #ccc;
+  padding-bottom: 10px;
+  margin-bottom: 25px;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -46,6 +51,7 @@
     transition: background-color 0.3s ease;
     width: 100px;
     margin: 0 auto;
+    font-size: 20px;
 }
 
 
