--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -3,6 +3,7 @@
     margin-bottom: 42.1px;
     width: 108px;
     height: 109px;
+    z-index: 1;
 }
 
 .about-us-page a{
@@ -17,6 +18,7 @@
     font-weight: 700;
     font-size: 22px;
     color: #FFFFFF;
+    z-index: 1;
 }
 
 .about-us-page .about-us {
@@ -25,9 +27,10 @@
     font-weight: 700;
     font-size: 22px;
     color: #FFFFFF;
+    z-index: 1;
 }
 
-.about-us-page .container-4 {
+.about-us-page .about-active {
     background: #3D76AF;
     position: relative;
     margin-right: 29px;
@@ -36,6 +39,7 @@
     justify-content: center;
     padding: 4px 7.3px 5px 8px;
     box-sizing: border-box;
+    z-index: 1;
 }
 
 .about-us-page .grievance {
@@ -46,6 +50,7 @@
     font-weight: 700;
     font-size: 22px;
     color: #FFFFFF;
+    z-index: 1;
 }
 
 .about-us-page .services {
@@ -56,6 +61,7 @@
     font-weight: 700;
     font-size: 22px;
     color: #FFFFFF;
+    z-index: 1;
 }
 
 .about-us-page .governing-body {
@@ -66,6 +72,7 @@
     font-weight: 700;
     font-size: 22px;
     color: #FFFFFF;
+    z-index: 1;
 }
 
 .about-us-page .gallery {
@@ -76,6 +83,7 @@
     font-weight: 700;
     font-size: 22px;
     color: #FFFFFF;
+    z-index: 1;
 }
 
 .about-us-page .contact-us {
@@ -86,9 +94,10 @@
     font-weight: 700;
     font-size: 22px;
     color: #FFFFFF;
+    z-index: 1;
 }
 
-.about-us-page .group-4 {
+.about-us-page .about-navbar-link {
     margin-bottom: 33px;
     display: flex;
     flex-direction: row;
@@ -102,7 +111,7 @@
     height: 38px;
 }
 
-.about-us-page .group-11 {
+.about-us-page .about-phone-svg {
     transform: rotate(18.253deg);
     margin-right: 4.7px;
     display: flex;
@@ -113,7 +122,7 @@
     box-sizing: border-box;
 }
 
-.about-us-page .container-1 {
+.about-us-page .about-phone-number {
     margin: 4px 0;
     display: inline-block;
     overflow-wrap: break-word;
@@ -126,9 +135,10 @@
     flex-direction: column;
     align-items: flex-end;
     box-sizing: border-box;
+    z-index: 1;
 }
 
-.about-us-page .group-29 {
+.about-us-page .about-phone {
     margin: 9px 38.2px 9px 0;
     display: flex;
     flex-direction: row;
@@ -142,14 +152,14 @@
     font-family: 'Inter';
     font-weight: 400;
     font-size: 25px;
-    color: #FFFFFF;
+    color: #FFFFFF; 
     text-align: center;
     width: 900px;
-    /* z-index: 1; */
-    padding-top: 30px;
+    z-index: 1;
+    padding-top: 20px;
 }
 
-.about-us-page .group-2 {
+.about-us-page .about-donatebtn {
     background: #145A98;
     position: relative;
     display: flex;
@@ -174,7 +184,7 @@
     box-sizing: border-box;
 }
 
-.about-us-page .container-7 {
+.about-us-page .about-navbar {
     margin-top: 4px;
     display: flex;
     flex-direction: column;
@@ -182,7 +192,7 @@
     box-sizing: border-box;
 }
 
-.about-us-page .container-5 {
+.about-us-page .about-container {
     margin-bottom: 570.9px;
     display: flex;
     flex-direction: row;
@@ -191,16 +201,18 @@
     box-sizing: border-box;
 }
 
-.about-us-page .lorem-ipsum-dolor-12 {
+.about-us-page .about-heading {
     margin-right: 5.2px;
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
     font-size: 40px;
     color: #FFFFFF;
+    margin-top: -210px;
+    z-index: 1;
 }
 
-.about-us-page .group-30 {
+.about-us-page .about-upper {
     background: url('../../assets/images/rectangle41.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
     position: relative;
     margin-bottom: 67px;
@@ -210,9 +222,20 @@
     padding: 34px 35px 80px 31px;
     width: 100%;
     box-sizing: border-box;
+    max-height: 100vh;
 }
 
-.about-us-page .lorem-ipsum-dolor-13 {
+.about-us-page .about-upper::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.5);
+    bottom: 1px;
+    /* z-index: -1; */
+  }
+
+.about-us-page .our-story-heading {
     margin: 0 10.1px 30px 0;
     display: inline-block;
     overflow-wrap: break-word;
@@ -222,7 +245,7 @@
     color: #145A98;
 }
 
-.about-us-page .lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua {
+.about-us-page .our-story-caption {
     margin: 0 1px 47px 0;
     display: inline-block;
     text-align: center;
@@ -248,7 +271,7 @@
     height: 497px;
 }
 
-.about-us-page .container-8 {
+.about-us-page .container-image-2 {
     display: flex;
     flex-direction: row;
     align-self: flex-start;
@@ -274,7 +297,7 @@
     height: 497px;
 }
 
-.about-us-page .group-31 {
+.about-us-page .our-story-section {
     position: relative;
     margin: 0 58px 129px 59px;
     display: flex;
@@ -285,7 +308,7 @@
     box-sizing: border-box;
 }
 
-.about-us-page .ellipse-20 {
+.about-us-page .our-values-container-images {
     border-radius: 503.5px;
     position: absolute;
     right: 120px;
@@ -294,7 +317,7 @@
     height: 1007px;
 }
 
-.about-us-page .lorem-ipsum-dolor-14 {
+.about-us-page .our-values-heading {
     margin: 0 0 93px 60px;
     display: inline-block;
     overflow-wrap: break-word;
@@ -331,7 +354,7 @@
     height: 456px;
 }
 
-.about-us-page .lorem-ipsum-dolor-15 {
+.about-us-page .compassion-section {
     position: relative;
     margin: 0 0 171px 0px;
     display: inline-block;
@@ -342,7 +365,7 @@
     color: #145A98;
 }
 
-.about-us-page .lorem-ipsum-dolor-19 {
+.about-us-page .our-values-section {
     margin: 0 0 124px 0px;
     display: inline-block;
     text-align: center;
@@ -354,7 +377,7 @@
     width: 230px;
 }
 
-.about-us-page .lorem-ipsum-dolor-18 {
+.about-us-page .empowerment-section {
     position: relative;
     margin-right: 24px;
     width: 791px;
@@ -365,7 +388,7 @@
     color: #145A98;
 }
 
-.about-us-page .lorem-ipsum-dolor-17 {
+.about-us-page .integrity-section {
     position: relative;
     overflow-wrap: break-word;
     font-family: 'Inter';
@@ -375,7 +398,7 @@
     margin-right: 115px;
 }
 
-.about-us-page .container-6 {
+.about-us-page .empowerment-integrity-section {
     margin-bottom: 19px;
     display: flex;
     flex-direction: row;
@@ -391,7 +414,7 @@
     height: 295px;
 }
 
-.about-us-page .group-35 {
+.about-us-page .our-values-container-images-without-caption {
     position: relative;
     margin-bottom: 5px;
     display: flex;
@@ -402,7 +425,7 @@
     box-sizing: border-box;
 }
 
-.about-us-page .lorem-ipsum-dolor-16 {
+.about-us-page .collaboration-section {
     margin-left: 40px;
     overflow-wrap: break-word;
     font-family: 'Inter';
@@ -411,7 +434,7 @@
     color: #145A98;
 }
 
-.about-us-page .lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-1 {
+.about-us-page .our-values-caption {
     position: absolute;
     top: 78px;
     right: 180px;
@@ -424,7 +447,7 @@
     width: 875px;
 }
 
-.about-us-page .group-36 {
+.about-us-page .our-values-container {
     position: relative;
     margin: 0 85px 128px 79px;
     display: flex;
@@ -444,7 +467,7 @@
     height: 100%;
 }
 
-.about-us-page .lorem-ipsum-dolor-20 {
+.about-us-page .get-involved-heading {
     position: relative;
     margin: 0 0.9px 30px 0;
     display: inline-block;
@@ -455,7 +478,7 @@
     color: #FFFFFF;
 }
 
-.about-us-page .lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit-sed-do-eiusmod-tempor-incididunt-ut-labore-et-dolore-magna-aliqua-2 {
+.about-us-page .get-involved-caption {
     position: relative;
     text-align: center;
     overflow-wrap: break-word;
@@ -466,7 +489,7 @@
     width: 1050px;
 }
 
-.about-us-page .group-37 {
+.about-us-page .get-involved-section {
     background: url('../../assets/images/rectangle25.png'), linear-gradient(#D9D9D9, #D9D9D9);
     position: relative;
     margin-bottom: 151px;
@@ -559,7 +582,7 @@
     color: #FFFFFF;
 }
 
-.about-us-page .group-21 {
+.about-us-page .about-donatebtn1 {
     margin: 2px 77.3px 44px 0;
     display: flex;
     flex-direction: column;
@@ -642,7 +665,7 @@
     color: #FFFFFF;
 }
 
-.about-us-page .group-20 {
+.about-us-page .about-donatebtn0 {
     position: relative;
     margin: 0 76.7px 96px 0;
     display: flex;
@@ -737,7 +760,7 @@
     box-sizing: border-box;
 }
 
-.about-us-page .container-1 {
+.about-us-page .about-phone-number {
     /* margin: 0 54.7px 19px 58px; */
     display: flex;
     flex-direction: row;
@@ -786,7 +809,7 @@
     height: 38px;
 }
 
-.about-us-page .container {
+.about-us-page .about-donate-section {
     margin: 9px 0 5.5px 0;
     display: flex;
     flex-direction: row;
@@ -866,7 +889,7 @@
     box-sizing: border-box;
 }
 
-.about-us-page .group-22 {
+.about-us-page .about-donatebtn2 {
     background: #145A98;
     position: relative;
     display: flex;
