--- a/frontend/src/Components/Form/Form.css
+++ b/frontend/src/Components/Form/Form.css
@@ -30,17 +30,17 @@
   }
 
 .forminput {
-  border: none;
-  border-bottom: 2px solid #ccc;
-  padding-bottom: 10px;
-  margin-bottom: 25px;
-  border-left: none;
-  border-right: none;
-  border-top: none;
-  background-color: #3D76AF;
-  outline: none;
-  color: #ffffff;
-  font-size: 20px;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    background-color: #3D76AF;
+    outline: none;
+    color: #ffffff;
+    font-size: 20px;
 }
 
 .formbtn {
@@ -51,7 +51,10 @@
     transition: background-color 0.3s ease;
     width: 100px;
     margin: 0 auto;
-    font-size: 20px;
+    background-color: #ffffff;
+    font-size: 21px;
+    font-weight: 550;
+    margin-top: 12px;
 }
 
 
@@ -65,14 +68,14 @@
     display: flex;
     flex-direction: column;
     color: #ffffff;
-    margin-top: 40px;
+    margin-top: 60px;
 }
 
 .right-align {
     flex: 1;
     text-align: right;
     justify-content: space-between;
-    margin-top: 40px;
+    margin-top: 60px;
 }
 
 .right-align img {
